--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,14 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:textSize="108dp"
         android:textColor="@color/white"
+        android:textSize="108dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.544"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.015" />
+        app:layout_constraintVertical_bias="0.085" />
 
     <EditText
         android:id="@+id/editText"
@@ -37,6 +37,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:maxLength="5"
         android:ems="10"
         android:backgroundTint="@color/white"
         android:textColor="@color/white"
@@ -51,7 +52,6 @@
 
     <TextView
         android:id="@+id/tvweather"
-        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -61,17 +61,17 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
+        android:textColor="@color/white"
         android:textSize="42dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.206" />
+        app:layout_constraintVertical_bias="0.254" />
 
     <TextView
         android:id="@+id/tvtime"
-        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -81,13 +81,14 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
+        android:textColor="@color/white"
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvweather"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.045" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -101,12 +102,12 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.457" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="395dp"
         android:layout_height="160dp"
         android:layout_marginStart="8dp"
@@ -114,8 +115,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
 
+        android:layout_marginBottom="8dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -133,12 +134,12 @@
 
             <TextView
                 android:id="@+id/tvtime2"
-                android:textColor="@color/white"
-                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text=""
-                android:textSize="24dp"/>
+                android:textColor="@color/white"
+                android:textSize="24dp" />
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -147,12 +148,12 @@
 
             <TextView
                 android:id="@+id/tvtemp2"
-                android:textColor="@color/white"
-                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text=""
-                android:textSize="24dp"/>
+                android:textColor="@color/white"
+                android:textSize="24dp" />
 
         </LinearLayout>
 
@@ -165,12 +166,12 @@
 
             <TextView
                 android:id="@+id/tvtime3"
-                android:textColor="@color/white"
-                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text=""
-                android:textSize="24dp"/>
+                android:textColor="@color/white"
+                android:textSize="24dp" />
 
             <ImageView
                 android:id="@+id/imageView3"
@@ -179,12 +180,12 @@
 
             <TextView
                 android:id="@+id/tvtemp3"
-                android:textColor="@color/white"
-                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text=""
-                android:textSize="24dp"/>
+                android:textColor="@color/white"
+                android:textSize="24dp" />
 
         </LinearLayout>
 
@@ -197,12 +198,12 @@
 
             <TextView
                 android:id="@+id/tvtime4"
-                android:textColor="@color/white"
-                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text=""
-                android:textSize="24dp"/>
+                android:textColor="@color/white"
+                android:textSize="24dp" />
 
             <ImageView
                 android:id="@+id/imageView4"
@@ -211,12 +212,12 @@
 
             <TextView
                 android:id="@+id/tvtemp4"
-                android:textColor="@color/white"
-                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text=""
-                android:textSize="24dp"/>
+                android:textColor="@color/white"
+                android:textSize="24dp" />
 
         </LinearLayout>
 
@@ -229,12 +230,12 @@
 
             <TextView
                 android:id="@+id/tvtime5"
-                android:textColor="@color/white"
-                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text=""
-                android:textSize="24dp"/>
+                android:textColor="@color/white"
+                android:textSize="24dp" />
 
             <ImageView
                 android:id="@+id/imageView5"
@@ -243,16 +244,54 @@
 
             <TextView
                 android:id="@+id/tvtemp5"
-                android:textColor="@color/white"
-                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text=""
-                android:textSize="24dp"/>
+                android:textColor="@color/white"
+                android:textSize="24dp" />
 
         </LinearLayout>
 
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/quote"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
+        android:maxWidth="400dp"
+        android:textColor="@color/white"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <TextView
+        android:id="@+id/city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:textColor="@color/white"
+        android:textSize="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.015" />
 
 </android.support.constraint.ConstraintLayout>
